# Beacon-Studios

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.yml  requirements.txt
beacon/: __init__.py  logging.py
beacon/api/: server.py
beacon/auth/: __init__.py  manager.py  policies.py  tokens.py
beacon/checkpoints/: __init__.py  loader.py  manager.py  saver.py
beacon/config/: __init__.py  loader.py  schema.py  settings.py
beacon/datasets/: __init__.py  builders.py  cleaner.py  loader.py  manager.py
beacon/logging/: __init__.py  logger.py  metrics.py
beacon/models/: __init__.py  attention.py  config.py  embeddings.py  transformer.py
beacon/registry/: __init__.py  manager.py  metadata.py  versioning.py
beacon/runtime/: __init__.py  batch.py  cache.py  engine.py  streaming.py
beacon/storage/: __init__.py  base.py  local.py  manager.py  s3.py
beacon/tokenizer/: __init__.py  manager.py  trainer.py
beacon/training/: __init__.py  distributed.py  optimizer.py  scheduler.py  trainer.py  validation.py
beacon/utils/: __init__.py  decorators.py  device.py  serialization.py  validators.py
