[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beacon-studios"
version = "0.1.0"
description = "Production-grade AI model ecosystem for Beacon AI platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [{name = "Beacon Studios", email = "info@beacon.studios"}]
keywords = ["ai", "ml", "transformers", "training", "inference"]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "tokenizers>=0.14.0",
    "safetensors>=0.4.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.14.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "tqdm>=4.66.0",
    "tensorboard>=2.14.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.41.0",
    "peft>=0.7.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "boto3>=1.28.0",
    "s3fs>=2023.10.0",
    "datasets>=2.14.0",
    "huggingface-hub>=0.18.0",
    "wandb>=0.16.0",
    "prometheus-client>=0.18.0",
    "correlation-id>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.4.0",
    "black>=23.10.0",
    "isort>=5.12.0",
    "pylint>=3.0.0",
    "mypy>=1.6.0",
    "flake8>=6.1.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

ml = [
    "flash-attn>=2.3.0",
    "triton>=2.1.0",
]

quantization = [
    "auto-gptq>=0.5.0",
    "optimum>=1.14.0",
]

export = [
    "onnx>=1.14.0",
    "onnxruntime>=1.17.0",
]

[project.urls]
Homepage = "https://beacon.studios"
Documentation = "https://docs.beacon.studios"
Repository = "https://github.com/beacon-studios/beacon-ai"
Issues = "https://github.com/beacon-studios/beacon-ai/issues"

[tool.setuptools]
packages = ["beacon"]

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["beacon"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[tool.pylint.messages_control]
disable = [
    "C0330",
    "C0326",
    "too-many-arguments",
    "too-many-instance-attributes",
]

[tool.pylint.format]
max-line-length = 120

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow running tests",
    "cuda: tests requiring CUDA",
]

[tool.coverage.run]
source = ["beacon"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
